<resources>
    <string name="app_name" translatable="false">ChillBack</string>
    <string name="my_library" translatable="true">My Library</string>

    <string name="choose_language" translatable="true">Choose Language</string>
    <string name="search" translatable="true">Search</string>

    <string name="log_out" translatable="true">Log Out</string>
    <string name="delete_account" translatable="true">Delete Account</string>
    <string name="normalize_tracks" translatable="true">Normalize Tracks</string>
    <string name="skip_silence" translatable="true">Skip Silence</string>
    <string name="cross_fading" translatable="true">Cross-Fading</string>
    <string name="mobile_data_streaming_videos" translatable="true">Use Mobile Data For Streaming Videos</string>
    <string name="mobile_data_streaming_music" translatable="true">Use Mobile Data For Streaming Music</string>
    <string name="show_local_music_files" translatable="true">Show Local Music Files</string>
    <string name="download_video_files" translatable="true">Download Video Files</string>
    <string name="mobile_data_downloading_music_files" translatable="true">Use Cellular to download music Files</string>
    <string name="mobile_data_downloading_lyric_files" translatable="true">Use Cellular to download lyric Files</string>
    <string name="mobile_data_downloading_video_files" translatable="true">Use Cellular to download video files</string>

    <string name="Account" translatable="true">Account</string>
    <string name="Audio" translatable="true">Audio</string>
    <string name="Streaming" translatable="true">Streaming</string>
    <string name="Files" translatable="true">Files</string>

    <string-array name="sprachen">
        <item>@string/en</item>
        <item>@string/de</item>
        <item>@string/fr</item>
        <item>@string/tr</item>
    </string-array>

    <string name="en" translatable="true">English</string>
    <string name="de" translatable="true">German</string>
    <string name="fr" translatable="true">French</string>
    <string name="tr" translatable="true">Turkish</string>

    <string name="account_delete_warning" translatable="true">Are you sure you want to log out from your account</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="log_out_msg" translatable="true">Log out from Account</string>
    <string name="delete_account_msg" translatable="true">Are you sure you want to delete your account</string>
    <string name="delete" translatable="true">Delete</string>

    <string name="sort_by" translatable="true">Sort By</string>
    <string name="alphabetically_a_z" translatable="true">Alphabetically A-Z</string>
    <string name="alphabetically_z_a" translatable="true">Alphabetically Z-A</string>
    <string name="most_played" translatable="true">Most Played</string>
    <string name="most_recent" translatable="true">Most Recent</string>
    <string name="recently_played" translatable="true">Recently Played</string>
    <string name="recently_added" translatable="true">Recently Added</string>

    <string name="lets_add_some_songs" translatable="true">Let\'s add some songs</string>
    <string name="add_songs" translatable="true">Add Songs</string>

    <string name="search_error_title" translatable="true">No Results for…</string>
    <string name="search_error_text" translatable="true">Please check your spellings or use different keywords</string>

    <string name="downloading">Downloading</string>
    <string name="notification_offline_support_msg">Checking files available for offline support</string>
    <string name="download_complete">Download complete</string>

    <string-array name="sozialMedien">
        <item>@string/instagram</item>
        <item>@string/youtube</item>
        <item>@string/tiktok</item>
        <item>@string/facebook</item>
    </string-array>
    <string name="facebook" translatable="true">Go to artists Profile on FaceBook</string>
    <string name="youtube" translatable="true">Go to artists Profile on Youtube</string>
    <string name="tiktok" translatable="true">Go to artists Profile on Tiktok</string>
    <string name="instagram" translatable="true">Go to artists Profile on Instagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>